@@ -31,6 +31,13 @@ Noteworthy changes in version 2.2.42 (unreleased)
 
   * gpgsm: Major rewrite of the PKCS#12 parser.  [T6536]
 
+  * gpgsm: Non-armored detached signature are now created without
+    using indefinite form length octets.  This improves compatibility
+    with some PDF signature verification software.
+
+  * gpgsm: Verification of detached signatures does now strip trailing
+    zeroes from the input if --assume-binary is used.  [rG6bdf11f671]
+
   * dirmngr: New option --ignore-crl-extensions.  [T6545]
 
   * dirmngr: Backport of the AD_QUERY command.  [rG2a3bad5985]
